--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,39 +1,54 @@
-<h1 class="text-5xl text-center">Pokedex</h1>
+<header class="p-4 md:flex md:justify-center">
+  <img src="/assets/img/logo.png" alt="Logo Pokemon" class="md:scale-90" />
+</header>
 
 <!-- Recherche par nom -->
-<label for="" class="flex justify-center text-center p-2 m-4">
-  <!-- blur = Plus focus sur l'input (seletionner) -->
-  <!-- $event = -->
-  <input
-    (blur)="updateData($event)"
-    type="text"
-    placeholder="Type name"
-    class="border p-2"
-  />
-  <button type="button" class="border p-2" (click)="searchByName()">
-    Search
-  </button>
+<!-- blur = Plus focus sur l'input (seletionner) -->
+<!-- $event = Attend un évènement pour ensuite envoyé la value dans la fonction searchByName-->
+<section class="flex justify-evenly items-center text-center lg:flex-col">
+  <section class="text-center flex justify-center p-2">
+    <input
+      (blur)="updateData($event)"
+      type="text"
+      placeholder="Type name"
+      class="border p-2 rounded-l-[8px] bg-amber-50 md:w-[250px] md:h-[50px] lg:w-[350px] lg:h-[60px]"
+    />
+    <article
+      class="border rounded-r-[8px] flex justify-center text-center items-center p-2 bg-amber-300"
+    >
+      <mat-icon type="button" (click)="searchByName()">search</mat-icon>
+    </article>
+    <!-- Active la fonction qui permet de chercehr par le nom -->
+  </section>
+
   <!-- Ternaire pour afficher le changement du A-Z -->
-  <!-- <button type="button" (click)="changeFilter()">{{this.isFilter ? 'A-Z':'Z-A' }}</button> -->
-  <label for="filter">{{ this.isFilter ? "A-Z" : "Z-A" }}</label>
-  <input type="radio" [id]="'filter'" (click)="changeFilter()" />
-</label>
-
+  <label for="filter" class="text-2xl"
+    >{{ this.isFilter ? "Z-A" : "A-Z" }}
+    <input type="radio" [id]="'filter'" (click)="changeFilter()" />
+  </label>
+</section>
 <!-- Affichage de la liste de 50 -->
+<section class="md:flex flex-col text-center items-center">
+  <ul
+    class="text-center flex flex-col justify-center gap-4 mt-4 md:w-1/2"
+  >
+    @for (pokemon of listSearch; track $index) {
+    <li
+      class="text-2xl flex flex-col border rounded-[10px] p-2 m-4 bg-amber-50"
+    >
+      <a [routerLink]="['detail', getPokemonId(pokemon.url)]" class="lg:text-4xl">{{
+        pokemon.name
+      }}</a>
+    </li>
+    }
 
-<ul class="text-center flex flex-col justify-center gap-4 mt-4">
-  @for (pokemon of listSearch; track $index) {
-  <li class="text-2xl flex flex-col border p-2 m-4">
-    <a [routerLink]="['detail', getPokemonId(pokemon.url)]">{{
-      pokemon.name
-    }}</a>
-  </li>
-  }
-  <!-- @for (pokemon of (pokemon$ | async)?.results; track $index) {
+    <!-- Liste de 50 sans la recherche -->
+    <!-- @for (pokemon of (pokemon$ | async)?.results; track $index) {
   <li class="text-2xl flex flex-col border p-2 m-4">
     <a [routerLink]="['detail', getPokemonId(pokemon.url)]">{{
       pokemon.name
     }}</a>
   </li>
   } -->
-</ul>
+  </ul>
+</section>
